# otus-cpp-basics

./: .gitignore  .gitmodules  README.md
hw_2/: CMakeLists.txt  hello_world.cpp
hw_3/: CMakeLists.txt  argument.cpp  argument.h  check_guess.cpp  check_guess.h  high_scores.cpp  high_scores.h  main.cpp  random_value.cpp
hw_4/: CMakeLists.txt  README.md
hw_4/include/: add.hpp  astnode.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
hw_4/src/: astnode.cpp  lexer.cpp  parser.cpp
hw_5/: CMakeLists.txt
hw_5/src/: main.cpp
hw_5/src/headers/: max.hpp  mean.hpp  min.hpp  statistics.hpp  std.hpp
hw_6/: CMakeLists.txt
hw_6/src/: main.cpp
hw_6/src/headers/: contiguous.h  doubly_linked_list.h
hw_7/: CMakeLists.txt
hw_7/src/: cintoguous.h  contiguous.h  doubly_linke_list.h  doubly_linked_list.h  main.cpp
hw_7/src/tests/: test_container.cpp
hw_7/test/: CMakeLists.txt  contiguous_container_tests.cpp  dll_container_tests.cpp  test_containers.cpp
hw_8/: .gitignore  CMakeLists.txt  main.cpp
